code_samples/simple_language_plugin/src/test/resources/AnnotatorTestData.java
public class Test {
  public static void main(String[] args) {
    System.out.println("simple:website");
    System.out.println("simple:key with spaces");
    System.out.println("simple:<error descr="Unresolved property">websit</error>");
  }
}
